Redo the datepicker z-index fix that didn't work because it has been applied only to the div.legacy, but as datepicker is appended to the end of the document it's outside the element. Also making the number a lot bigger to account for a large amount of tasks, which cause higher z-indexes.
Fixes #2245.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,3 +53,7 @@ body {
   color: $text-color;
   background-color: $body-bg;
 }
+
+.ui-datepicker {
+  z-index: 999999 !important;
+}
